After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692385 - Misc compilation fixes
Misc compilation fixes
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-23 13:48 UTC by Bastien Nocera
Modified: 2013-02-15 13:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-rr: Setup i18n support ourselves (1.53 KB, patch)
2013-01-23 13:48 UTC, Bastien Nocera
committed Details | Review
utils: Remove gnome-desktop-utils.[ch] (10.19 KB, patch)
2013-01-23 13:49 UTC, Bastien Nocera
committed Details | Review
gnome-bg: Fix introspectability of GnomeBg (1.86 KB, patch)
2013-01-23 13:49 UTC, Bastien Nocera
committed Details | Review
gnome-bg: Fix incorrect parameters (740 bytes, patch)
2013-01-23 13:50 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-01-23 13:48:42 UTC
.
Comment 1 Bastien Nocera 2013-01-23 13:48:44 UTC
Created attachment 234191 [details] [review]
gnome-rr: Setup i18n support ourselves

In the class_init() so it's only called once.
Comment 2 Bastien Nocera 2013-01-23 13:49:42 UTC
Created attachment 234192 [details] [review]
utils: Remove gnome-desktop-utils.[ch]

The single function it contained
(gnome_desktop_prepend_terminal_to_vector) is obsoleted by the
G_APP_INFO_CREATE_NEEDS_TERMINAL flag of GAppInfo.

The private _gnome_desktop_init_i18n() function is also unused,
its only caller having been removed.
Comment 3 Bastien Nocera 2013-01-23 13:49:55 UTC
Created attachment 234193 [details] [review]
gnome-bg: Fix introspectability of GnomeBg

By requiring the enums from gsettings-desktop-schemas.
Comment 4 Bastien Nocera 2013-01-23 13:50:44 UTC
Created attachment 234195 [details] [review]
gnome-bg: Fix incorrect parameters
Comment 5 Bastien Nocera 2013-02-15 13:11:29 UTC
Attachment 234191 [details] pushed as b352ab3 - gnome-rr: Setup i18n support ourselves
Attachment 234192 [details] pushed as 9bab214 - utils: Remove gnome-desktop-utils.[ch]
Attachment 234193 [details] pushed as f97ed25 - gnome-bg: Fix introspectability of GnomeBg
Attachment 234195 [details] pushed as 881146a - gnome-bg: Fix incorrect parameters