gnome-rr: Setup i18n support ourselves

In the class_init() so it's only called once.

https://bugzilla.gnome.org/show_bug.cgi?id=692385